--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,9 +4,12 @@
 
     .navSection {
         .headerFlex();
-        background: rgb(245, 245, 245);
+        background: rgba(245, 245, 245, 0.95);
         width: 100%;
         padding-top: 1%;
+        position: fixed;
+        top: 0;
+        
     
         h1 {
             font-size: 4rem;
@@ -36,7 +39,7 @@
 
     img {
         border-radius: 5px;
-        margin: 0px auto;
+        margin: 109px auto;
 
         @media @tablet {
             width: 100%;
